crates/sdk-tests/tests/funding/fundable_hook_and_fundable_not_allowed.stderr
error: #[fundable_hook]` and `#[fundable(..)]` can't co-exist.
 --> $DIR/fundable_hook_and_fundable_not_allowed.rs:3:1
  |
3 | #[template]
  | ^^^^^^
  |
  = note: this error originates in the attribute macro `template` (in Nightly builds, run with -Z macro-backtrace for more info)
