crates/sdk-tests/tests/funding/fundable_hook_and_fundable_not_allowed.rs
use svm_sdk::template;

#[template]
mod Template {
    #[fundable_hook]
    #[fundable(default)]
    fn get() {}
}

fn main() {}
